# redbrowser

./: .bazelrc  .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  README.md  WORKSPACE.bazel  build.zig  build.zig.zon  build.zig.zon.nix  flake.nix
brand/: .gitignore  README.md
browser/: .gitignore
libs/: .gitignore
libs/zgl/: binding.zig  zgl.zig
libs/zglfw/: glfw.zig
libs/zwgpu/: wgpu.zig
nix/: cache.nix  ci.nix  devShell.nix
rust-piston-bindings/: .gitignore  Cargo.toml
rust-piston-bindings/src/: lib.rs
src/: .gitignore
src/gpu/renderer/: main.zig  piston.zig  renderer.zig  shaders.zig
src/gpu/window/: sdl.zig  window.zig  winit.zig
src/shaders/: shader.frag  shader.vert
